Refactor. Fix docker database password

--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ CURRENCY_LAYER_KEY=6cfc37af1bbaca50b98c06c8d142c809
 PGADMIN_DEFAULT_EMAIL=live@admin.com
 PGADMIN_DEFAULT_PASSWORD=password
 
-#PGHOST=database
-PGHOST=127.0.0.1                             # when running the app without docker 
+PGHOST=database
+#PGHOST=127.0.0.1                             # when running the app without docker 
 PGPORT=5432
 PGUSER=postgres
 PGPASSWORD=root
